# ProjetToupie

./: Acknowledgements.md  CMakeLists.txt  ConeSimple.cc  ConeSimple.h  Graphiques.m  How to compile.txt  Integrateur.cc  Integrateur.h  IntegrateurEulerCromer.cc  IntegrateurEulerCromer.h  JOURNAL  LicensesSources.md  Matrice.cc  Matrice.h  README  README.md  REPONSES.rtf  Systeme.cc  Systeme.h  Toupie.cc  Toupie.h  ToupieMain_en_150.ts  Vecteur.cc  Vecteur.h  XMLReader.cc  XMLReader.h  constantes.cc  constantes.h  helpimage.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  simplefixedcone.xml  slippingcone.xml  slippingtippetop.xml  testIntegrateur.cc  testMatrice.cc  testToupie.cc  ui_mainwindow.h  (+1 more)
Graphics/: CMakeLists.txt  Dessinable.cc  Dessinable.h  Graphics.h  SupportADessin.cc  SupportADessin.h
Graphics/FileViewer/: CMakeLists.txt  FileViewer.cc  FileViewer.h
Graphics/OpenGLViewer/: CMakeLists.txt  GLTrace.cc  GLTrace.h  GLWindow.cc  GLWindow.h  PlotWidget.cc  PlotWidget.h  main.cpp  model.cpp  model.h  model_fragment.frag  model_fragment.vert  modelloader.cpp  modelloader.h  models.qrc  scene.cpp  scene.h  shaders.qrc  trace_fragment_shader.glsl  trace_vertex_shader.glsl  window.cpp  window.h
Graphics/OpenGLViewer/Models/: BakuMeaGan.DAE  TippeTop1.dae  cone.dae  table.3DS  tabledefault.DAE  tablesmall.DAE  tippetopfull.DAE  tippetophollow.DAE
Graphics/OpenGLViewer/QCustomPlot/: CMakeLists.txt  PlotWindow.cc  PlotWindow.h  plotwindow.ui  qcustomplot.cpp  qcustomplot.h  ui_plotwindow.h
Graphics/OpenGLViewer/assimp/: CMakeLists.txt
Graphics/OpenGLViewer/assimpsrc/: CMakeLists.txt
Graphics/TextViewer/: CMakeLists.txt  TextViewer.cc  TextViewer.h
Graphics/text/: TextViewer.cc  TextViewer.h
Interface/: CMakeLists.txt  SimOut.txt  SimulatorTest.cc
Interface/Simulator/: Simulator.cc  Simulator.h
Interface/System/: Systeme.cc  Systeme.h
MathCore/: CMakeLists.txt  ConeSimple.cc  ConeSimple.h  Integrateur.cc  Integrateur.h  IntegrateurEulerCromer.cc  IntegrateurEulerCromer.h  MathCore.h  Matrice.cc  Matrice.h  Toupie.cc  Toupie.h  Trace.h  Vecteur.cc  Vecteur.h  VecteurArray.cc  VecteurArray.h  constantes.cc  constantes.h
MathCore/Integrateurs/: All_Integrateurs.h  Integrateur.h  IntegrateurEulerCromer.cc  IntegrateurEulerCromer.h  IntegrateurNewmark.cc  IntegrateurNewmark.h  IntegrateurRungeKutta.cc  IntegrateurRungeKutta.h
MathCore/Integrateurs/LSODA/: CMakeLists.txt  LSODA.cpp
MathCore/LinAlg/: Matrice.cc  Matrice.h  Vecteur.cc  Vecteur.h  VecteurArray.cc  VecteurArray.h
MathCore/Tests/: CMakeLists.txt  gnuplotdata.txt  testIntegrateur.cc  testMatrice.cc  testToupie.cc  testVecteur.cpp
MathCore/Toupies/: ConeSimple.cc  ConeSimple.h  ConeSymFixe.cc  ConeSymFixe.h  ConeSymGlisse.cc  ConeSymGlisse.h  TippeTop.cc  TippeTop.h  TippeTopFriction.cc  TippeTopFriction.h  TippeTopRolls.cc  TippeTopRolls.h  Toupie.cc  Toupie.h  Trace.h  blankmodel.dae
P10/: CMakeLists.txt  SimulatorTest.cc
P9/: CMakeLists.txt  ExerciceP9a.cc  ExerciceP9b.cc  SystemeOutput.txt
Reponses/: JOURNAL  REPONSES.rtf
Resources/Models/: cone.dae  tabledefault.DAE  tippetophollow.DAE
Tests/: CMakeLists.txt  ExerciceP9a.cc  ExerciceP9b.cc  SystemeOutput.txt  TestSysteme.cc
